<resources>
    <string name="app_name">ChecQk</string>
    <!--    <string name="version_name">Version 1.0 – 15/10/2020 </string>  By Sagar-->

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="please_login_to_your_account">Please login to your account by providing the registered
        email address or the Login ID</string>
    <string name="input_the_otp_that_has_been_sent">Input the OTP that has been sent on the registered
        email address</string>
    <string name="set_a_strong_password">Set a strong password to access
        your account to avoid OTP each time</string>
    <string name="enter_the_password_set_earlier">Enter the password you had set earlier for
        this user account</string>

    <string name="network_failure_string">Connection to server failed. Please retry</string>


    <string name="keyboard_validation">qwertyuiopasdfghjklzxcvbnm 1234567890 QWERTYUIOPASDFGHJKLZXCVBNM !@#$%^&amp;*()_+=-{}[]|\/.,:;"'</string>
    <string name="keyboard_validation_wo_sp_char">qwertyuiopasdfghjklzxcvbnm1234567890QWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="keyboard_validation_only_numbers">1234567890</string>
    <string name="keyboard_validation_phone_country_code">+1234567890</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Post Login Timings Fragment</string>
    <string name="second_fragment_label">Basic Info Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="is_the_restaurant_open_24_7">Is The Restaurant open 24/7 ?</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="first_name">Hi, %1$s!</string>
    <string name="already_login_message">This user is logged into another device.\n\n Do you wish to login into this device?</string>
    <string name="title_activity_discount_management">DiscountManagementActivity</string>

    <string name="menu">Menu</string>
    <string name="menu_category">Menu Category</string>
    <string name="menu_category_with_star">Menu Category <b><font color='#FA0224'>*</font></b></string>
    <string name="menu_name">Menu Name</string>

    <string name="menu_section">Menu Section</string>
    <string name="menu_section_with_star">Menu Section <b><font color='#FA0224'>*</font></b></string>
    <string name="starter_veg">Starter Veg</string>
    <string name="save">Save</string>
    <string name="category_name">Category Name</string>
    <string name="add_tax_value">Add Tax Value</string>

    <string name="dish_category">Dish Category</string>
    <string name="dish_info">Dish Info</string>
    <string name="menu_type">Menu Type</string>
    <string name="upload_relevant_images">Upload Relevant Images <b><font color='#FA0224'>*</font></b></string>
    <string name="dish_name">Dish Name <b><font color='#FA0224'>*</font></b></string>
    <string name="dish_summary">Dish Summary <b><font color='#FA0224'>*</font></b></string>
    <string name="price">Price <b><font color='#FA0224'>*</font></b></string>
    <string name="discounted_price">Discounted Price</string>
    <string name="min_order">Min Order <b><font color='#FA0224'>*</font></b></string>
    <string name="max_order">Max Order  <b><font color='#FA0224'>*</font></b></string>
    <string name="cuisine_info">Cuisine Info</string>
    <string name="customization_info">Customization Info</string>
    <string name="customization">Customization</string>
    <string name="select_at_least_one_cuisine">Select at least one of the following cuisine</string>
    <string name="type_cuisine_name">Type cuisine name</string>
    <string name="dish_availability">Dish Availability</string>
    <string name="dish_available_all_time">Dish is available at all time.</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="add_time">Add Time</string>
    <string name="save_dish">Save Dish</string>
    <string name="add">Add</string>
    <string name="show_inactive_list">Show inactive list</string>
    <string name="longitude_string">Longitude</string>
    <string name="latitude_string">Latitude</string>

    <string name="this_will_remove_the_category">This will delete your images for the selected category.\nDo you want to proceed?</string>
    <string name="do_you_want_to_delete_the_subadmin">Are you sure you want to delete the SubAdmin?</string>
    <string name="do_you_want_to_logout">Are you sure you want to logout ?</string>
    <string name="first_name_mandatory">First Name <b><font color='#FA0224'>*</font></b></string>

    <string name="staff_management">Staff Management</string>
    <string name="add_safety_readings">Add Safety Readings</string>
    <string name="add_new_staff_user">Add New Staff User</string>
    <string name="active_staff_users">Active Staff Users</string>
    <string name="in_active_staff_user">In-Active Staff User</string>
    <string name="staff_user_name">Staff User Name</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="last_login">Last Login</string>
    <string name="created_on">Created On</string>
    <string name="action">Action</string>

    <string name="add_new_staff_info">Add New Staff Info</string>
    <string name="basic_info">Basic Info</string>
    <string name="first_name_with_star">First Name <b><font color='#FA0224'>*</font></b></string>
    <string name="access_info">Access Info</string>
    <string name="select_access_roll">Select Access Role <b><font color='#FA0224'>*</font></b></string>
    <string name="about_the_user">About The User</string>
    <string name="languages_know">Languages Known <b><font color='#FA0224'>*</font></b></string>
    <string name="designation">Designation <b><font color='#FA0224'>*</font></b></string>
    <string name="total_experience">Total Experience <b><font color='#FA0224'>*</font></b></string>
    <string name="with_us_since">With Us Since </string>
    <string name="address_info">Address Info</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="area">Area</string>
    <string name="postal_code">Postal Code</string>
    <string name="landmark">Landmark</string>
    <string name="timing_info">Timing Info</string>

    <string name="add_new_staff_safety_readings">Add New Staff Safety Readings</string>
    <string name="safety_measures_for_date">Safety measures for 14th Oct 2020</string>
    <string name="mask">Mask</string>
    <string name="temperature">Temperature</string>

    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="false">fcm_default_channel_name</string>

    <string name="add_new_role">Add New Role</string>
    <string name="active_records">Active Records</string>
    <string name="inactive_records">In-Active Records</string>
    <string name="role_name">Role Name</string>
    <string name="assign_to_user">Assign To User</string>
    <string name="last_modified_by">Last Modified By</string>
    <string name="created_by">Created By</string>

    <string name="access_configuration">Access Configuration</string>

</resources>
