<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.astrika.checqk.view.dashboard.viewmodels.SubAdminAccessRoleViewModel" />

    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/add_new_role"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/circular_rounded_corner_purple_background"
                android:fontFamily="@font/air_bnb_cereal_medium"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:text="@string/add_new_role"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="12dp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/active_records_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/air_bnb_cereal_book"
                    android:gravity="center"
                    android:onClick="@{()-> viewModel.onActiveRecordsClick()}"
                    android:padding="10dp"
                    android:text="@string/active_records"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary" />

                <View
                    android:id="@+id/activeView"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorPrimary" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorBlack" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/inactive_records_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/air_bnb_cereal_book"
                    android:gravity="center"
                    android:onClick="@{()-> viewModel.onInActiveRecordsClick()}"
                    android:padding="10dp"
                    android:text="@string/inactive_records"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlack" />

                <View
                    android:id="@+id/inactiveView"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/random_grey" />

            </LinearLayout>

        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:visibility="visible">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/air_bnb_cereal_book"
                android:hint="@string/role_name"
                tools:text="@string/staff_user_name" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:src="@drawable/ic_arrow_down" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:visibility="visible">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/air_bnb_cereal_book"
                android:hint="@string/search"
                tools:text="@string/search" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="5dp"
                android:padding="3dp"
                android:src="@drawable/places_ic_search" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/access_role_recycle_iew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="@{viewModel.accessRolesMutableLiveData.empty ? View.GONE : View.VISIBLE}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="@font/air_bnb_cereal_book"
            android:gravity="center"
            android:text="No access roles found"
            android:textColor="@color/colorBlack"
            android:textSize="16dp"
            android:visibility="@{viewModel.accessRolesMutableLiveData.empty ? View.VISIBLE : View.GONE}" />


    </LinearLayout>


</layout>
