<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="200dp"
        android:background="@drawable/circular_rounded_corner_white_background">

        <ImageView
            android:id="@+id/close_dialog_image_view"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_close_accent_24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="10dp"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/menu_section_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:textSize="12dp"
            android:backgroundTint="@color/random_grey"
            android:hint="@string/category_name"/>

        <TextView
            android:id="@+id/menu_section_error_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menu_section_name_edit_text"
            android:text="Enter menu section name"
            android:layout_marginStart="30dp"
            android:visibility="gone"
            android:textColor="@color/colorRed"/>

        <EditText
            android:id="@+id/tax_value_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/save_button"
            app:layout_constraintTop_toBottomOf="@+id/menu_section_name_edit_text"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:textSize="12dp"
            android:inputType="numberDecimal"
            android:backgroundTint="@color/random_grey"
            android:hint="@string/add_tax_value"/>

        <TextView
            android:id="@+id/tax_value_error_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tax_value_edit_text"
            android:text="Enter tax value"
            android:layout_marginStart="30dp"
            android:visibility="gone"
            android:textColor="@color/colorRed"/>

        <TextView
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/circular_rounded_corner_purple_background"
            android:fontFamily="@font/air_bnb_cereal_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/menu_section_name_edit_text"
            android:paddingStart="40dp"
            android:paddingTop="10dp"
            android:paddingEnd="40dp"
            android:paddingBottom="10dp"
            android:text="@string/save"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textStyle="bold" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>