<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="dishMenuSection"
            type="com.astrika.checqk.model.ProductWithSectionDetails" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp">

        <RelativeLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:visibility="visible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/circular_rounded_corner_white_background_with_accent_stroke">

                <ImageView
                    android:id="@+id/drag_image_view"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_move"
                    android:layout_centerVertical="true"
                    android:padding="6dp"
                    android:layout_margin="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/starter_veg"
                    style="@style/HeaderTextStyle"
                    android:text="@{dishMenuSection.catalogueSectionDTO.catalogueSectionName}"
                    android:layout_toRightOf="@+id/drag_image_view"
                    android:layout_centerVertical="true"
                    android:textColor="@color/colorBlack"
                    android:textAllCaps="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Tax Percentage 05%"
                    android:text="@{`Tax Percentage ` + dishMenuSection.catalogueSectionDTO.taxValue + `%`}"
                    android:fontFamily="@font/air_bnb_cereal_book"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/colorBlack"
                    android:layout_marginEnd="10dp"/>

            </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dish_list_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/main_layout"
            android:visibility="gone"
            android:background="@color/random_grey_light">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dish_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="visible"/>

            <Button
                android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/add"
                app:layout_constraintTop_toBottomOf="@+id/dish_recycler_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/circular_rounded_corner_purple_background"
                android:textColor="@color/colorWhite"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/show_inactive_list_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/air_bnb_cereal_book"
                app:layout_constraintTop_toBottomOf="@+id/add_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/show_inactive_list"
                android:textColor="@color/colorBlack"
                android:layout_margin="10dp"/>

            <ImageView
                android:id="@+id/inactive_list_arrow_image_view"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:layout_constraintTop_toBottomOf="@+id/add_button"
                app:layout_constraintStart_toEndOf="@+id/show_inactive_list_text_view"
                android:src="@drawable/ic_arrow_down"
                android:layout_marginTop="7dp"
                android:layout_marginStart="5dp"
                android:padding="5dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/inactive_dish_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/show_inactive_list_text_view"
                android:visibility="gone"/>



            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/random_grey"
                app:layout_constraintTop_toBottomOf="@+id/inactive_dish_recycler_view"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>